[BE] test: 검색v2 테스트 추가 #802